<resources>
    <string name="app_name">Alojam. Juveniles CyL</string>
    <string name="location_permission_needed">Debe proporcionar permisos de localización a la app para obtener los alojamientos cercanos a su posición</string>
    <string name="location_desabled_warning">Debe habilitar la localización para obtener los alojamientos cercanos</string>
    <string name="searching_position_message">Buscando…</string>
    <string name="cancel">Cancelar</string>
    <string name="search_rechage_points">Cercanos</string>
    <string name="cancelled_search">Búsqueda cancelada</string>
    <string name="distance">Distancia (aprox.):</string>
    <string name="search_points_ok">Búsqueda finalizada</string>
    <string name="search_by_address">Por dirección</string>
    <string name="search">Buscar:</string>
    <string name="introduce_address">Dirección a buscar</string>
    <string name="hint_address">Localidad / Calle …</string>
    <string name="accept">Aceptar</string>
    <string name="cant_find_address">No se ha podido encontrar la dirección</string>
    <string name="current_address">Dirección: %s</string>
    <string name="title_activity_map">Map</string>
    <string name="distance_label_km">%.1f Km</string>
    <string name="settings">Ajustes</string>
    <string name="about">Acerca de</string>
    <string name="search_ratio">Radio de búsqueda (en KM)</string>
    <string name="ratio_limit">1–200 Km</string>
    <string name="seach_ratio_error">Debe introducir un valor entre 1 y 200</string>
    <string name="no_results">No hay resultados</string>
    <string name="main_title">Alojamientos juveniles CyL</string>
    <string name="version_label">Versión %s</string>
    <string name="search_all">Todos</string>
    <string name="no_images">No hay imágenes</string>
    <string name="opened">Abierto: %s</string>
    <string name="content_description_minimize">Minimizar</string>
    <string name="content_description_info">más info</string>
    <string name="content_description_navigate">Navegar</string>
    <string name="network_error">Fallo al buscar. Error de conexión.</string>
    <string name="capacity">Capacidad: %s</string>
    <string name="equipment">Equipamiento: %s</string>
    <string name="activities">Actividades: %s</string>
    <string name="hobbies">Ocio: %s</string>
    <string name="close">Cerrar</string>
    <string name="understood">Entendido</string>
</resources>
