<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:padding="20dp"
                                                   android:background="@drawable/toast_background">

    <TextView
            android:id="@+id/tvSettingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            style="@style/Footer.Label"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

    <TextView
            android:id="@+id/tvRatio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/search_ratio"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tvSettingsTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"/>

    <EditText
            android:id="@+id/etRatioSearchSetting"
            android:textColorHint="@color/green"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/ratio_limit"
            android:inputType="number"
            android:maxLength="3"
            app:layout_constraintTop_toBottomOf="@id/tvRatio"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/tvErrorRationSearchSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seach_ratio_error"
            android:maxLines="2"
            android:textColor="@color/red"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/etRatioSearchSetting"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/etRatioSearchSetting"/>

    <Button
            android:id="@+id/btnAccept"
            style="@style/Button"
            android:text="@string/accept"
            app:layout_constraintTop_toBottomOf="@id/tvErrorRationSearchSetting"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/btnCancel" android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"/>

    <Button
            android:id="@+id/btnCancel"
            style="@style/Button.Grey"
            android:text="@string/cancel"
            app:layout_constraintStart_toEndOf="@+id/btnAccept"
            app:layout_constraintTop_toTopOf="@+id/btnAccept" app:layout_constraintBottom_toBottomOf="@+id/btnAccept"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>