<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:padding="20dp"
                                                   android:background="@drawable/toast_background">

    <TextView
            android:id="@+id/tvAddressLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/introduce_address"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <AutoCompleteTextView
            android:id="@+id/autoAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_address"
            android:textColorHint="@color/green"
            app:layout_constraintTop_toBottomOf="@id/tvAddressLabel" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/tvAddressLabel"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:id="@+id/btnAccept"
            style="@style/Button"
            android:text="@string/accept"
            app:layout_constraintTop_toBottomOf="@id/autoAddress"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/btnCancel" android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"/>

    <Button
            android:id="@+id/btnCancel"
            style="@style/Button.Grey"
            android:text="@string/cancel"
            app:layout_constraintStart_toEndOf="@+id/btnAccept"
            app:layout_constraintTop_toTopOf="@+id/btnAccept" app:layout_constraintBottom_toBottomOf="@+id/btnAccept"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>