<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:animateLayoutChanges="true"
              android:background="@color/greenAlmostWhite">

    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/shadow"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/llSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

        <TextView
                style="@style/Footer.Label"
                android:id="@+id/labelSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/search"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"/>

        <Button
                android:id="@+id/btnFindAll"
                style="@style/Button"
                android:text="@string/search_all"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/btnFindNear"
                app:layout_constraintTop_toTopOf="@+id/btnFindNear"
                app:layout_constraintBottom_toBottomOf="@+id/btnFindNear"/>

        <Button
                android:id="@+id/btnFindNear"
                style="@style/Button"
                android:text="@string/search_rechage_points"
                app:layout_constraintTop_toBottomOf="@+id/labelSearch"
                app:layout_constraintStart_toEndOf="@id/btnFindAll"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/btnFindByAddress"
                />

        <Button
                android:id="@+id/btnFindByAddress"
                style="@style/Button"
                android:text="@string/search_by_address"
                app:layout_constraintTop_toTopOf="@+id/btnFindNear"
                app:layout_constraintBottom_toBottomOf="@+id/btnFindNear"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@+id/btnFindNear"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
            android:id="@+id/llLoading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/tvLoadingMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Footer.Label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/searching_position_message"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginTop="16dp" android:layout_marginBottom="16dp"/>

            <ProgressBar
                    android:id="@+id/pbLoading"
                    style="@style/CircularProgress"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_centerHorizontal="true"
                    android:indeterminate="true"
                    android:backgroundTint="@color/colorAccent"
                    app:layout_constraintTop_toTopOf="@+id/tvLoadingMessage"
                    app:layout_constraintStart_toEndOf="@+id/tvLoadingMessage" android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tvLoadingMessage"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button android:id="@+id/btnCancel"
                style="@style/Button"
                android:text="@string/cancel"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="4dp"
                android:textColor="@android:color/white"
        />


    </LinearLayout>


</LinearLayout>