<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/shadow"/>

        <RelativeLayout
                        android:id="@+id/wrapperMinimize"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:background="@color/colorThree">
                <ImageView
                        android:id="@+id/ivMinimize"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:padding="0dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_arrow_drop_down"
                        android:contentDescription="@string/content_description_minimize"/>
        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/mapFooterHeight"
                android:animateLayoutChanges="true"
                android:background="@color/lightGreen"
                android:padding="15dp"
                android:clickable="true"
                android:focusable="true">

                <TextView
                        android:id="@+id/tvName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:textStyle="bold"
                        tools:text="Facultad de ciencias"
                        android:textColor="@color/colorTwo"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="8dp" android:layout_marginEnd="8dp"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                />

                <TextView
                        android:id="@+id/tvDescription"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTwo"
                        app:layout_constraintTop_toBottomOf="@id/tvName"
                        app:layout_constraintStart_toStartOf="@+id/tvName"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="C/ Francia 22 bla fdsafd afdf dsaf adsfds fdafads fdasfadfasdf fasdfasdf"
                        android:layout_marginTop="8dp" android:layout_marginEnd="8dp"/>

                <ImageView
                        android:id="@+id/ivInfo"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:src="@drawable/ic_info_outline_big"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/guideline"
                        android:background="?selectableItemBackgroundBorderless"
                        android:contentDescription="@string/content_description_info"
                        app:layout_constraintBottom_toTopOf="@+id/ivNavigation"
                        app:layout_constraintHorizontal_bias="0.5"
                        android:layout_marginTop="8dp" android:layout_marginEnd="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/tvOpened"/>

                <ImageView
                        android:id="@+id/ivNavigation"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:padding="4dp"
                        android:src="@drawable/ic_navigation_60dp"
                        android:background="?selectableItemBackgroundBorderless"
                        android:contentDescription="@string/content_description_navigate"
                        app:layout_constraintEnd_toEndOf="@+id/ivInfo"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/ivInfo"
                        app:layout_constraintTop_toBottomOf="@+id/ivInfo"
                        android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                        android:layout_marginStart="8dp"/>

        <TextView
                android:id="@+id/labelOpened"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:textSize="14sp"
                android:text="@string/opened"
                android:maxLines="2"
                app:layout_constraintStart_toStartOf="@+id/tvName" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription"
        />

                <TextView
                        android:id="@+id/tvOpened"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:textSize="14sp"
                        tools:text="Punto de recarga bla bla bla que esta nosedonde fdsaf fdsfasdf asfdsfadsfsdaf  asdfsdf adsfasdf sadfasdf asdfsadf 4tretetetertresadfasdf"
                        android:maxLines="2"
                        app:layout_constraintTop_toBottomOf="@+id/labelOpened" android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@+id/tvName"
                />

        <androidx.constraintlayout.widget.Group
                android:id="@+id/wrapperDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="labelDistance, tvDistance"
        />

        <TextView
                android:id="@+id/labelDistance"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:textSize="18sp"
                android:text="@string/distance"
                app:layout_constraintBottom_toBottomOf="@+id/tvDistance"
                app:layout_constraintTop_toTopOf="@+id/tvDistance" app:layout_constraintStart_toStartOf="@+id/tvName"
        />

                <TextView
                        android:id="@+id/tvDistance"
                        android:layout_width="wrap_content"
                        android:textSize="18sp"
                        android:layout_marginStart="4dp"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/labelDistance"
                        tools:text="1.5 Km"
                        android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/tvOpened"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toStartOf="@+id/guideline"/>

        <androidx.constraintlayout.widget.Group
                android:id="@+id/wrapperImages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="pager, pageIndicatorView"
                />

        <androidx.viewpager.widget.ViewPager
                android:id="@+id/pager"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/tvDistance"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline" />

        <com.rd.PageIndicatorView
                android:id="@+id/pageIndicatorView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:layout_constraintStart_toStartOf="@id/pager"
                app:layout_constraintEnd_toEndOf="@id/pager"
                app:layout_constraintBottom_toBottomOf="@id/pager"
                app:piv_animationType="scale"
                app:piv_dynamicCount="true"
                app:piv_interactiveAnimation="true"
                app:piv_selectedColor="@color/colorAccent"
                app:piv_unselectedColor="@color/colorOne"
                app:piv_viewPager="@id/pager" android:layout_marginBottom="8dp"/>

        <RelativeLayout
                android:id="@+id/wrapperNoImages"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/tvDistance"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                tools:visibility="visible">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:rotation="-45"
                        android:layout_centerInParent="true"
                        android:textColor="@color/light_grey"
                        android:text="@string/no_images"/>

        </RelativeLayout>


        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                    android:id="@+id/guideline"
                                                    app:layout_constraintGuide_percent="0.75"
                                                    android:orientation="vertical"/>




</androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>